# olc

./: .gitignore
calculus/: calculus.opam  dune-project
calculus/_build/: .db  .digest-db  log
calculus/_build/default/: calculus.dune-package  calculus.install
calculus/_build/default/.ppx/0bb5094b13567c3c4e1ee33245b80e63/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
calculus/_build/default/lib/: calculus.cma  calculus.cmxa  calculus.cmxs
calculus/_build/default/lib/.calculus.objs/byte/: calculus.cmi  calculus.cmo  calculus.cmt
calculus/_build/default/lib/.calculus.objs/native/: calculus.cmx
calculus/_build/default/lib/.merlin-conf/: lib-calculus
calculus/_build/default/test/.calculus.eobjs/byte/: dune__exe__Calculus.cmi  dune__exe__Calculus.cmti
calculus/_build/default/test/.calculus.eobjs/native/: dune__exe__Calculus.cmx
calculus/_build/default/test/.merlin-conf/: exe-calculus
calculus/_build/install/default/lib/calculus/: META  dune-package  opam
calculus/lib/: dune
calculus/test/: dune
