(lang dune 3.11)

(name calculus)

(generate_opam_files true)

(source
 (github ionchirica/olc))

(authors "Ion Chirica")

(package
 (name calculus)
 (synopsis "A short synopsis")
 (description "OCaml Lambda Calculus")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
